feat(specialist): Implement profile deactivation
Fix some failures and make some improvements.

Resolves: PT-103
